<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:text="@string/Nombre"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="322sp"
        android:layout_height="53sp"
        android:layout_marginTop="4sp"
        android:ems="10"
        android:hint="@string/hNombre"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvnTarjeta"
        android:layout_width="207dp"
        android:layout_height="23dp"
        android:layout_marginTop="20sp"
        android:text="@string/nTarjeta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etnTarjeta"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etnTarjeta"
        android:layout_width="223sp"
        android:layout_height="49sp"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:hint="@string/formatoNTarjeta"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/etNombre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sTipo"
        app:layout_constraintTop_toBottomOf="@+id/tvnTarjeta" />

    <TextView
        android:id="@+id/tvfExpi"
        android:layout_width="191dp"
        android:layout_height="31dp"
        android:layout_marginTop="20sp"
        android:text="@string/fExpi"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toBottomOf="@+id/etnTarjeta" />

    <EditText
        android:id="@+id/etfExpi"
        android:layout_width="154sp"
        android:layout_height="49sp"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:hint="@string/formatoExpi"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvfExpi"
        app:layout_constraintTop_toBottomOf="@+id/tvfExpi" />

    <Spinner
        android:id="@+id/sTipo"
        android:layout_width="79sp"
        android:layout_height="52sp"
        app:layout_constraintStart_toStartOf="@+id/etNombre"
        app:layout_constraintTop_toTopOf="@+id/etnTarjeta" />

    <TextView
        android:id="@+id/tvCVV"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:text="@string/cvv"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvfExpi"
        app:layout_constraintTop_toTopOf="@+id/tvfExpi" />

    <EditText
        android:id="@+id/etCVV"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="28sp"
        android:ems="10"
        android:hint="@string/formatoCVV"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/etfExpi"
        app:layout_constraintEnd_toEndOf="@+id/etnTarjeta"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/etfExpi"
        app:layout_constraintTop_toTopOf="@+id/etfExpi"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/correo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvfExpi"
        app:layout_constraintTop_toBottomOf="@+id/etfExpi" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="323sp"
        android:layout_height="56sp"
        android:layout_marginTop="12sp"
        android:ems="10"
        android:hint="@string/formatoCorreo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/etCVV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <TextView
        android:id="@+id/tvMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/monto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvApp" />

    <TextView
        android:id="@+id/tvMontoT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text=""
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMonto"
        app:layout_constraintVertical_bias="0.0"
        tools:text="$2,280.00" />

    <Button
        android:id="@+id/btPagar"
        android:layout_width="219dp"
        android:layout_height="70dp"
        android:text="@string/pagar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo"
        app:layout_constraintVertical_bias="0.243" />

</androidx.constraintlayout.widget.ConstraintLayout>